Added last details to twitter and viking

--- a/WeekThree/DayFive/ghettoTwitter/index.html
+++ b/WeekThree/DayFive/ghettoTwitter/index.html
@@ -69,7 +69,13 @@
 		Joined March 2014</p>
 	</div>
 
-	<div class="col-md-5 tweet-column">Tweeting</div>
+	<div class="col-md-5 tweet-column">
+		<div class="tweet-links">
+			<a href="#">Tweets</a> 
+			<a href="#">Tweets & replies</a>
+		    <a href="#">Media</a>
+		</div>
+	</div>
 <!-- 	<div class="col-md-4"></div> -->
 </section>
 
