Updated logo and header

--- a/Alumni project/index.html
+++ b/Alumni project/index.html
@@ -7,9 +7,9 @@
 <body>
 
 <header>
-	<ul class="left-header">
-		<li>IronHack</li>
-	</ul>
+	<div class="left-header">
+		<img src="logo.png">
+	</div>
 	<ul class="right-header">
 		<li><input type="text" name="search" placeholder="Search Ironhack"></li>
 		<li>Have an account? Log in</li>
