--- a/Alumni project/index.html
+++ b/Alumni project/index.html
@@ -23,7 +23,10 @@
 	<li><button>Advanced Search</button></li>
 </ul>
 </div>
-<h1>Alumni Results:</h1>
+<div class="results">
+	<h1>Alumni Search</h1>
+	<p>Results For: Miami, Healthcare, Backend</p>	
+</div>
 <div class="search-results">
 	<div class="profile">
 		<img src="profile.jpg">
