fixed concert bug

--- a/WeekFive/jquery/index.html
+++ b/WeekFive/jquery/index.html
@@ -9,7 +9,14 @@
 
 </head>
 <body>
+
+<center>
+<button class="vanish">Genie Button</button>
+<button class="unicorn">Unicorn Colorzzzzzz!</button>
+</center>
 <div>
+
+
  <h1>Hello I'm testing JQuery</h1>
 <p>Beep boop bop</p>
 <p>Hi</p>
@@ -29,5 +36,6 @@
 <strong class="bold">Even here</strong>
 </small>
 </div>
+<img src="media/giphy.gif" class="uni">
 </body>
 </html>
