Begun pokemon api project

--- a/WeekFive/spotify/index.html
+++ b/WeekFive/spotify/index.html
@@ -15,9 +15,8 @@
 	<div>
 		<div>
 			<form class="search">
-			<label for="js-artist">Enter Artist:</label>
-			<input type="text" name="js-artist" class="js-artist" placeholder="Lupe Fiasco">
-			<button>Search Spotify</button>
+			<input type="text" name="js-artist" class="js-artist" placeholder="Artist Name">
+			<button type="submit" class="btn btn-primary">Search Spotify</button>
 			</form>
 		</div>
 		<div>
@@ -29,7 +28,7 @@
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
-      ...
+      <ul class="modal-list" id="modal-list"></ul>
     </div>
   </div>
 </div>
